# nanobot

./: .gitignore  2026-06-18-181237-pull-httpsgithubcomgit-protonunanobot.txt  AGENTS.md  CLAUDE.md  LDS_Visualizer.html  README.md  nanopi-neo-plus2-pinmap.md  pixi.toml
.claude/: settings.local.json
.claude/memory/: MEMORY.md  architecture-two-planes-three-hubs.md  behavior-layer-plan.md  cooling-fan-control.md  cpu-reduction-plan.md  deployment-state.md  dev-host-is-ubuntu.md  esp32-build-flash-on-dev-pc.md  esp32-coprocessor.md  esp32-flash-setup-ubuntu.md  esp32-hardware-fried-ground-fix.md  esp32-link-wedge-first-ping-hole.md  esp32-pid-velocity-pending.md  esp32-tooling-setup.md  esp32-zenoh-pico-integration.md  gpu-vision-camera-architecture.md  gpu-vision-camera-reconnect.md  gpu-vision-features-todo.md  gpu-vision-implemented.md  gpu-vision-phase0-verified.md  h5-gpu-only-webcam-use.md  health-event-log.md  imu-calibration-added.md  imu-mount-rotation-fixed.md  imu-quality-tools-built.md  lds-idle-spindown-ui-fix.md  lds-scan-path-sbc-direct.md  lima-boot-load-bug.md  memory-in-git.md  motors-dead-after-gpio-reassign.md  oled-display-perf.md  pin-bus-map.md  project-overview.md  pytest-run-gotcha.md  rclpy-string-array-param-gotcha.md  robostack-build-gotchas.md  robostack-zenoh-no-serial.md  sbc-cpu-profile.md  scheduled-routines.md  selftest-spin-imu-mismatch.md  (+12 more)
deploy/: enable-h5-audio.sh  install-espeakng.sh  install-picotts.sh  sbc-setup.sh
deploy/sudoers/: nano-power
deploy/systemd/: nano-app.service  nano-ekf.service  nano-heal.service  nano-heal.timer  nano-map.service  nano-nav.service  nano-robot.target  nano-router.service  nano-sensors.service  nano-stack.service
deploy/udev/: 90-i2c.rules  95-nano-usb.rules
docs/: TODO.md  brain.md  personality-files.md  presence.puml
firmware/esp32_coprocessor/: README.md  platformio.ini
firmware/esp32_coprocessor/include/: config.h  wiring.md
firmware/esp32_coprocessor/src/: main.cpp
firmware/esp32_coprocessor/webtest/: README.md  build_agent.sh  esp32_webtest.py  index.html
firmware/nanobot_coprocessor/: .gitignore  README.md  patch_zenohpico.py  platformio.ini
firmware/nanobot_coprocessor/include/: zenoh_generic_config.h
firmware/nanobot_coprocessor/src/: main.cpp
firmware/zenoh_pico_spike/: README.md
firmware/zenoh_pico_spike/src/: main.cpp
firmware/zenoh_pico_spike/tools/: build_zenohd_serial.sh
memory/: beats.json  dev_sensors.json  experiments.json  llm.json  personality.json  phrases.json  presence_chart.yaml  purpose.json  self_model.json  skill_likes.json  trait_history.json  tts.json  workshop.json
memory/skills/: appreciate-quiet-readiness.md  auto-level.md  check-balance.md  check-on-nearby.md  laugh-off-glitch.md  look-around-detail.md  notice-chill.md  notice-cool-efficiency.md  notice-quiet-moment.md  recover-with-invite.md  reflect-on-stillness.md  spot-surprise.md  support-nearby.md
scripts/: build.sh  deploy.sh  dev_run.ps1  dev_tts_test.py  dev_webui.py  export_statechart_puml.py  gpu_vision_spike.py  i2c_scan.py  personality_creator.py  pregenerate_phrases.py  rviz_remote.sh  sim_run.sh  smoke_test.py  stack.sh  start-dev.ps1  unit_exec.sh
src/app_hub/: package.xml  setup.cfg  setup.py
src/app_hub/app_hub/: hub.py
src/behavior/: package.xml  setup.py
src/behavior/behavior/: __init__.py  brain.py  mood_node.py  planner.py  presence.py  purpose.py
src/behavior/test/: test_brain.py  test_planner.py  test_presence.py  test_purpose.py  test_tempo.py  test_vision_reflexes.py
src/imu_driver/: package.xml  setup.py
src/imu_driver/imu_driver/: imu_node.py
src/lds_driver/: Cargo.toml  package.xml
src/lds_driver/.cargo/: config.toml
src/lds_driver/src/: lds.rs  main.rs
src/lds_driver_py/: package.xml  setup.cfg  setup.py
src/lds_driver_py/lds_driver_py/: lds_node.py  scan_blob.py
src/motor_control/: package.xml  setup.py
src/motor_control/motor_control/: motor_node.py  pca9685.py
src/oled_display/: package.xml  setup.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: ekf.yaml  gz_bridge.yaml  robot.yaml
src/robot_bringup/launch/: bringup.launch.py  robot.launch.py  visualize.launch.py
src/robot_bringup/rviz/: nano.rviz
src/robot_bringup/urdf/: nano.urdf.xacro
src/robot_bringup/worlds/: nano_room.sdf
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: MotorCommand.msg  WheelEncoders.msg
src/sensor_hub/: package.xml  setup.py
src/sensor_hub/sensor_hub/: hub.py
src/sim_hardware/: package.xml  setup.py
src/slam_nav/: package.xml  setup.py
src/slam_nav/slam_nav/: nav_node.py  (+1 more)
src/sys_monitor/: package.xml  setup.cfg  setup.py
src/sys_monitor/sys_monitor/: health_log.py  monitor_node.py
src/sys_monitor/test/: test_health_log.py
src/web_control/: package.xml  setup.py
src/web_control/launch/: web.launch.py
src/web_control/skills/: README.md  ask-question.md  blink-led.md  cool-down.md  expand-offline.md  explore-room.md  express-a-wish.md  forge-skill.md  greet-who-i-see.md  grow-phrases.md  listen.md  look-around.md  observe-body.md  optimize-situation.md  react-to-handling.md  read-lidar.md  read-my-docs.md  recall-recent.md  say-hello.md  share-a-thought.md  system-check.md  wiggle.md
src/web_control/test/: test_camera_announce.py  test_compound_face.py  test_docs_source.py  test_expand_offline.py  test_gpu_vision_helpers.py  test_phrasebank.py  test_reflect_announce.py  test_skill_beat_offline.py  test_skill_likes.py  test_skills.py  test_skillsmith.py  test_stress.py  test_time_awareness.py  test_trait_history.py  test_vision_diary.py  test_workshop_probation.py
src/web_control/web/: app.js  chrome.js  devtools.js  index.html  logs.js  map.js  oled.js  personality.js  sim.js  style.css
src/web_control/web_control/: __init__.py  cognition.py  gpu_vision.py  imu_interference.py  jsonio.py  llm.py  mic_audio.py  mjpeg_camera.py  phrasebank.py  procstats.py  skills.py  skillsmith.py  stress.py  telemetry.py  tts.py  web_server.py
src/wheel_odometry/: package.xml  setup.py
(+5 files in other folders)
