<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>app_hub</name>
  <version>0.1.0</version>
  <description>Single-process host that runs the expression/cognition layer (web_control,
    oled_display, behavior) under one executor to save RAM on the 1 GB board. No change
    to node names, topics, params or behaviour.</description>
  <maintainer email="ib.elfaramawy@gmail.com">ib</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>web_control</exec_depend>
  <exec_depend>oled_display</exec_depend>
  <exec_depend>behavior</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
