<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lds_driver_py</name>
  <version>0.1.0</version>
  <description>Roborock LDS02RR / Neato lidar serial driver in Python, publishing sensor_msgs/LaserScan on /scan. Python stand-in for the Rust lds_driver (which doesn't build against this RoboStack Humble).</description>
  <maintainer email="ib.elfaramawy@gmail.com">ib</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
