<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_control</name>
  <version>0.1.0</version>
  <description>Differential-drive motor controller: geometry_msgs/Twist on /cmd_vel to PCA9685 PWM over I2C.</description>
  <maintainer email="ib.elfaramawy@gmail.com">ib</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
