<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files and shared parameters for the Nano robot.</description>
  <maintainer email="ib.elfaramawy@gmail.com">ib</maintainer>
  <license>MIT</license>

  <exec_depend>wheel_odometry</exec_depend>
  <exec_depend>motor_control</exec_depend>
  <exec_depend>oled_display</exec_depend>
  <exec_depend>web_control</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
