<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_hub</name>
  <version>0.1.0</version>
  <description>Single-process host that runs the light sensor/driver nodes (imu_driver,
    sys_monitor, wheel_odometry, lds_driver_py) under one executor to save RAM on the
    1 GB board. No change to topics, rates or behaviour.</description>
  <maintainer email="ib.elfaramawy@gmail.com">ib</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>imu_driver</exec_depend>
  <exec_depend>sys_monitor</exec_depend>
  <exec_depend>wheel_odometry</exec_depend>
  <exec_depend>lds_driver_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
