<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sys_monitor</name>
  <version>0.1.0</version>
  <description>Board health monitor: publishes CPU load/usage, memory, temperature and disk as diagnostic_msgs/DiagnosticArray.</description>
  <maintainer email="ib.elfaramawy@gmail.com">ib</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
