<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>web_control</name>
  <version>0.1.0</version>
  <description>rosbridge websocket + a static web page to view the LDS map and teleop the robot.</description>
  <maintainer email="ib.elfaramawy@gmail.com">ib</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
